@@ -7,6 +7,7 @@ o Pdfimage extracts and stores JBIG2Globals
 o Option to compress a stream only if it is made smaller
 o Encode predictor for PNG Sub (bpc = 8, 3 components)
 o Fix for LZWDecode streams which overfill the table
+o New endpage_fast and use it for malformed file detection
 
 2.6 (July 2023)
 
